# plugin-media-provider-fs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  plugin.toml  wasmer.toml
.github/workflows/: release.yml
resources/: config.toml  config_spec.toml  default_config.toml
scripts/: build.sh
src/: bindings.rs  lib.rs  main.rs
wit/: plugin.wit
