[package]
name = "plugin-media-provider-fs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spaeher-contracts = {git = "https://github.com/openspaeher/lib-contracts.git"}
semver = "1.0.25"

[dependencies]
wit-bindgen = { version = "0.39.0" }
rusqlite = { version = "0.33.0" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:plugin-media-provider-fs"

[package.metadata.component.dependencies]
