[package]
name = "plugin-media-provider-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.39.0" }
rusqlite = { version = "0.33.0" }
lazy_static = "1.5.0"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.8.20"
ignore = "0.4.23"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:plugin-media-provider-fs"

[package.metadata.component.dependencies]
